--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mime-types": "^3.0.1",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
