Final Commit fixed student.json

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,9 @@
             "src": "/(.*)",
             "dest": "/index.js"
         }
-    ]
+    ],
+    "includeFiles": [
+    "data/students.json"
+  ]
 
 }
