--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,19 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.js"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
     ],
-    "includeFiles": [
-    "data/students.json"
-  ]
-
-}
+    "files": [
+      "data/students.json"
+    ]
+  }
+  
