--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,17 @@
     "builds": [
       {
         "src": "index.js",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["data/students.json"]
+        }
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "index.js"
+        "dest": "/index.js"
       }
-    ],
-    "files": [
-      "data/students.json"
     ]
-  }
+}
   
